Fix layout shifts on the new tree pages

--- a/client/web/src/repo/tree/TreePagePanels.module.scss
+++ b/client/web/src/repo/tree/TreePagePanels.module.scss
@@ -18,6 +18,13 @@
     }
 }
 
+.readme-loading {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 30rem;
+}
+
 .card-col-header-wrapper {
     background-color: var(--color-bg-2);
 
